@@ -38,6 +38,8 @@
 <p>2017-08-11  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/gif.c (ReadGIFImage): Assure that global colormap is
+initialized.</li>
 <li>coders/pict.c (ReadPICTImage): Fix memory leaks in error return
 path.  ImageMagick CVE CVE-2017-8353.  Patch by Petr Gajdos.</li>
 </ul>
